Bug 580834. Make nsLayoutUtils::GetActiveScrolledRoot stop at the nearest popup ancestor instead of asserting. r=tnikkel,a=dbaron